--- a/Portfolio/Home.html
+++ b/Portfolio/Home.html
@@ -186,10 +186,10 @@
                                     <img id="starry-logo" src="img/starry-logo.png" alt="Starry" />
                                 </a> -->
                                 <a href="https://www.peanutsquare.com/" target="_blank">
-                                    <img id="mullen-logo" src="img/psllp-logo.png" alt="Mullen" />
+                                    <img id="mullen-logo" src="img/psllp-logo.png" alt="Peanut Square LLP" />
                                 </a>
                                 <a href="https://www.business-standard.com/article/technology/gurugram-police-train-over-5-800-students-to-raise-cyber-security-awareness-121061600115_1.html" target="_blank">
-                                    <img id="nu-logo" src="img/gurugram.png" alt="Northeastern" />
+                                    <img id="nu-logo" src="img/gurugram.png" alt="GPCSSI'21" />
                                 </a>
                             </div>
                         </div>
