--- a/Portfolio/Home.html
+++ b/Portfolio/Home.html
@@ -189,7 +189,7 @@
                                     <img id="mullen-logo" src="img/psllp-logo.PNG" alt="Peanut Square LLP" />
                                 </a>
                                 <a href="https://www.business-standard.com/article/technology/gurugram-police-train-over-5-800-students-to-raise-cyber-security-awareness-121061600115_1.html" target="_blank">
-                                    <img id="nu-logo" src="img/gurugram.png" alt="GPCSSI'21" />
+                                    <img id="nu-logo" src="img/gurugram.PNG" alt="GPCSSI'21" />
                                 </a>
                             </div>
                         </div>
@@ -236,7 +236,7 @@
                                 <a class="image-link"><i class="fa fa-link"></i></a>
                                 <!-- <a href="https://google.com" target="_blank"><i class="fa fa-link"></i></a> -->
                             </div>
-                            <img src="img/google-it-support.png" alt="image">
+                            <img src="img/google-it-support.PNG" alt="image">
                             <div class="portfolio-info">
                                 <h3>Google IT Support - Specialization</h3>
                             </div>
@@ -249,7 +249,7 @@
                                 <a class="image-link"><i class="fa fa-link"></i></a>
                                 <!-- <a href="https://google.com" target="_blank"><i class="fa fa-link"></i></a> -->
                             </div>
-                            <img src="img/arch-google-cloud.png" alt="image">
+                            <img src="img/arch-google-cloud.PNG" alt="image">
                             <div class="portfolio-info">
                                 <h3>Architecting with Google Compute Engine</h3>
                             </div>
@@ -262,7 +262,7 @@
                                 <a class="image-link"><i class="fa fa-link"></i></a>
                                 <!-- <a href="https://google.com" target="_blank"><i class="fa fa-link"></i></a> -->
                             </div>
-                            <img src="img/it-automation-with-python.png" alt="image">
+                            <img src="img/it-automation-with-python.PNG" alt="image">
                             <div class="portfolio-info">
                                 <h3>Google IT Automation with Python</h3>
                             </div>
@@ -275,7 +275,7 @@
                                 <a class="image-link"><i class="fa fa-link"></i></a>
                                 <!-- <a href="https://google.com" target="_blank"><i class="fa fa-link"></i></a> -->
                             </div>
-                            <img src="img/ml-tensor.png" alt="image">
+                            <img src="img/ml-tensor.PNG" alt="image">
                             <div class="portfolio-info">
                                 <h3>Machine Learning with Tensorflow</h3>
                             </div>
