--- a/Portfolio/Home.html
+++ b/Portfolio/Home.html
@@ -288,7 +288,7 @@
                                 <a class="image-link"><i class="fa fa-link"></i></a>
                                 <!-- <a href="https://google.com" target="_blank"><i class="fa fa-link"></i></a> -->
                             </div>
-                            <img src="img/adv-ml-tensor.png" alt="image">
+                            <img src="img/adv-ml-tensor.PNG" alt="image">
                             <div class="portfolio-info">
                                 <h3>Advance Machine Learning with Tensorflow</h3>
                             </div>
@@ -301,7 +301,7 @@
                                 <a class="image-link"><i class="fa fa-link"></i></a>
                                 <!-- <a href="https://google.com" target="_blank"><i class="fa fa-link"></i></a> -->
                             </div>
-                            <img src="img/deeplearning.png" alt="image">
+                            <img src="img/deeplearning.PNG" alt="image">
                             <div class="portfolio-info">
                                 <h3>Deep Learning</h3>
                             </div>
