--- a/Portfolio/Home.html
+++ b/Portfolio/Home.html
@@ -704,7 +704,7 @@
                     </div>
                     <div class="modal-body">
                         <p>
-                            <img class="img-responsive img-centered" src="img/zeronsec.png" alt="">
+                            <img class="img-responsive img-centered" src="img/zeronsec.PNG" alt="">
                         </p>
                         <p class="modal-description">I was involved with Zeronsec as an Cyber Security Intern from November'20 to April'21 and have learnt skills listed as follows:
                         <li> Python - How Industry work's with Python. </li>
@@ -730,7 +730,7 @@
                     </div>
                     <div class="modal-body">
                         <p>
-                            <img class="img-responsive img-centered" src="img/gurugram.png" alt="">
+                            <img class="img-responsive img-centered" src="img/gurugram.PNG" alt="">
                         </p>
                         <p class="modal-description"> A Great Great Great Initiative by Haryana Police, Gurugram Cyber Cell and Mr. Rakshit Tandon. It is the 9th Consecutive year of the intership providing students from different states and part's from India the core knowledge regarding Cyber Security, Cyber Crimes, Cyber Laws and Much Much More.</p>
                         <p class="visit"><a href="https://t-18.medium.com/gpcssi21-c1cb926b5f1d" target="_blank" id="visit-btn">Visit Source</a></p>
@@ -752,7 +752,7 @@
                     </div>
                     <div class="modal-body">
                         <p>
-                            <img class="img-responsive img-centered" src="img/psllp-logo.png" alt="">
+                            <img class="img-responsive img-centered" src="img/psllp-logo.PNG" alt="">
                         </p>
                         <p class="modal-description">Here, at Peanut Square LLP, I am working as an Full Time - Data Scientist. </p>
                         <br>
@@ -796,7 +796,7 @@
                     </div>
                     <div class="modal-body">
                         <p>
-                            <img class="img-responsive img-centered" src="img/bookmarks.png" alt="">
+                            <img class="img-responsive img-centered" src="img/bookmarks.PNG" alt="">
                         </p>
                         <p class="modal-description"> One day I just woke up and realized my bookmarks folder was overflowing, disorganized, and hard to navigate. So, I decided to make what I had always hoped my bookmarks folder to look like. This site is essentially a visualization of my bookmarks folder, and also a resource for other Developers and Designers. I am by no means an expert on any of the topics covered by these links, but I do know a thing or two about Development and Design and Cyber Security and I hope it helps!!!!!!!!!! </p>
                         <p class="visit"> <a href="https://bookmarks-0.github.io/" target="_blank" id="visit-btn">View Source</a></p>
@@ -818,7 +818,7 @@
                     </div>
                     <div class="modal-body">
                         <p>
-                            <img class="img-responsive img-centered" src="img/hackers-handbook.png" alt="">
+                            <img class="img-responsive img-centered" src="img/hackers-handbook.PNG" alt="">
                         </p>
                         <p class="modal-description">In my spare time I enjoy discovering vulnerabilities and other bugs. This Book - The Web Application Hacker's Handbook is said to be the Bible for Cyber Security and has all the concepts, methodologies and some lab's in it..</p>
                         <p class="visit"><a href="https://github.com/T-18/Web-Application-Hackers-Handbook" target="_blank" id="visit-btn">Visit Source </a></p>
