--- a/Portfolio/Home.html
+++ b/Portfolio/Home.html
@@ -901,10 +901,10 @@
 
         Lookin' at the source code huh?
         Be sure to drop me a line! I'd love to chat,
-        whether it's about code, design, dogs,
-        coffee, snowboarding, or anything in between.
+        whether it's about code, design, cat's,
+        coffee, or anything in between.
 
-        - Brittany
+        - तमन्ना तिवारी🧚🏻
 
         ********************************************** -->
 </body>
