--- a/Portfolio/Home.html
+++ b/Portfolio/Home.html
@@ -2,7 +2,7 @@
 <html lang="en">
 
 <head prefix="og: http://ogp.me/ns#">
-    <title>TAMANNA TIWARI | Web Developer &amp; Security Researcher</title>
+    <title>Tamanna Tiwari | Web Developer &amp; Security Researcher</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="keywords" content="Security Researcher, Tamanna, Tiwari, Tamanna018, Cyber Security, Intern, university, student, web, website, computer, software, developer, engineer, designer" />
