--- a/Portfolio/Home.html
+++ b/Portfolio/Home.html
@@ -353,7 +353,7 @@
                                 <a class="image-link"><i class="fa fa-link"></i></a>
                                 <!-- <a href="https://google.com" target="_blank"><i class="fa fa-link"></i></a> -->
                             </div>
-                            <img src="img/Zeronsec.png" alt="image">
+                            <img src="img/Zeronsec.PNG" alt="image">
                             <div class="portfolio-info">
                                 <h3>Zeronsec</h3>
                             </div>
@@ -367,7 +367,7 @@
                                 <a class="image-link"><i class="fa fa-link"></i></a>
                                 <!-- <a href="https://google.com" target="_blank"><i class="fa fa-link"></i></a> -->
                             </div>
-                            <img src="img/gurugram-police.png" alt="image">
+                            <img src="img/gurugram-police.PNG" alt="image">
                             <div class="portfolio-info">
                                 <h3>GPCSSI'21</h3>
                             </div>
@@ -380,7 +380,7 @@
                                 <a class="image-link"><i class="fa fa-link"></i></a>
                                 <!-- <a href="https://google.com" target="_blank"><i class="fa fa-link"></i></a> -->
                             </div>
-                            <img src="img/psllp-logo.png" alt="image">
+                            <img src="img/psllp-logo.PNG" alt="image">
                             <div class="portfolio-info">
                                 <h3>Peanut Square LLP</h3>
                             </div>
@@ -406,7 +406,7 @@
                                 <a class="image-link"><i class="fa fa-link"></i></a>
                                 <!-- <a href="https://google.com" target="_blank"><i class="fa fa-link"></i></a> -->
                             </div>
-                            <img src="img/bookmarks.png" alt="image">
+                            <img src="img/bookmarks.PNG" alt="image">
                             <div class="portfolio-info">
                                 <h3>BOOKMARKS</h3>
                             </div>
@@ -419,7 +419,7 @@
                                 <a class="image-link"><i class="fa fa-link"></i></a>
                                 <!-- <a href="https://google.com" target="_blank"><i class="fa fa-link"></i></a> -->
                             </div>
-                            <img src="img/hackers-handbook.png" alt="image">
+                            <img src="img/hackers-handbook.PNG" alt="image">
                             <div class="portfolio-info">
                                 <h3>The Web Application Hacker's Handbook</h3>
                             </div>
