--- a/Portfolio/Home.html
+++ b/Portfolio/Home.html
@@ -353,7 +353,7 @@
                                 <a class="image-link"><i class="fa fa-link"></i></a>
                                 <!-- <a href="https://google.com" target="_blank"><i class="fa fa-link"></i></a> -->
                             </div>
-                            <img src="img/Zeronsec.PNG" alt="image">
+                            <img src="img/zeronsec.PNG" alt="image">
                             <div class="portfolio-info">
                                 <h3>Zeronsec</h3>
                             </div>
